Update .gitignore and add Docker data directory*** ***Add friend-request and friendship entities*** ***Add search functionality to getLangs method*** ***Add onDelete: "CASCADE" to user-preference, user-topic, friendship, and user-language entities*** ***Add FriendRequestStatus enum and update status column in friend-request entity*** ***Add blockedUsers and blockedByUsers relationships to user entity*** ***Update dependencies in package.json
